--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.1",
     "method-override": "^2.3.5",
+    "mongoose": "^5.2.17",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
